spirala2 initial spark

--- a/HTML/detalji.html
+++ b/HTML/detalji.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalji</title>
     <link rel="stylesheet" type="text/css" href="../Style/detalji.css">
+    <script src="../Scripts/carousel.js"></script>
+    <script src="../Scripts/detalji.js"></script>
 </head>
 
 <body>
@@ -17,6 +19,7 @@
         <p><strong>Kvadratura:</strong> 58 m²</p>
         <p><strong>Cijena:</strong> 232,000 KM</p>
     </div>
+    
 
     <h3>DETALJI</h3>
     <div id="detalji">
@@ -50,6 +53,10 @@
                 voluptatibus neque explicabo qui, quam, illo suscipit sint quo officia dolores consequatur voluptatem.
                 Laborum dolor at placeat!</p>
         </div>
+    </div>
+    <div class="navigation-buttons">
+        <button id="btnLijevo">Lijevo</button>
+        <button id="btnDesno">Desno</button>
     </div>
 </body>
 
