spirala2 u master branch

--- a/HTML/meni.html
+++ b/HTML/meni.html
@@ -28,6 +28,10 @@
             <a href="vijesti.html" target="_parent">Vijesti</a>
             <span class="icon" id="icon-vijesti">📰</span>
         </li>
+        <li>
+            <a href="statistika.html" target="_parent">Vijesti</a>
+            <span class="icon" id="icon-statistika">📶</span>
+        </li>
     </ul>
     
 </html>
