--- a/HTML/meni.html
+++ b/HTML/meni.html
@@ -29,7 +29,7 @@
             <span class="icon" id="icon-vijesti">📰</span>
         </li>
         <li>
-            <a href="statistika.html" target="_parent">Vijesti</a>
+            <a href="statistika.html" target="_parent">Statistika</a>
             <span class="icon" id="icon-statistika">📶</span>
         </li>
     </ul>
