ispravka menija i vracanje onog passworda za hesiranje

--- a/Spirala3/wt24start/public/html/meni.html
+++ b/Spirala3/wt24start/public/html/meni.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meni</title>
     <link rel="stylesheet" href="../Style/meni.css">
+    <script src="../scripts/meni.js"></script>
+    <script src="../scripts/PoziviAjax.js"></script>
+
 </head>
 <body>
     <ul>
@@ -35,6 +38,10 @@
         <li>
             <a href="prijava.html" target="_parent" id="odjavaLink">Odjava</a>
             <span class="icon" id="icon-statistika">🔒</span>
+        </li>
+        <li>
+            <a href="mojiUpiti.html" target="_parent" id="upitiLink">moji upiti</a>
+            <span class="icon" id="icon-statistika">📃</span>
         </li>
     </ul>
     
