--- a/Spirala4/wt24start/public/html/mojiUpiti.html
+++ b/Spirala4/wt24start/public/html/mojiUpiti.html
@@ -33,7 +33,7 @@
         <table id="upitiTabela">
             <thead>
                 <tr>
-                    <th>ID korisnika</th>
+                    <th>ID Nekretnine</th>
                     <th>Tekst Upita</th>
                 </tr>
             </thead>
